===
- Fixed build (jars and uber jars)
- The top level 'agent' is the unparsed version needed for better hacker detection.
- Better hacker detection (SQL variants)
- Fixed bug in the way the value is passed during walking around
- Fixed bug in the tests

v0.7
===
- Allow wiping a value
- Allow setting all fields to a specific value (for example wiping them)
- Changed the matcher language to support extracting ranges from a string (like; extract 3rd to 5th word).

v0.8
===
- Detect SQL injection better.
- Detect some smartwatches
- Many updated and improved rules
- Allow setting the cache size

v0.9
===
- Detect very old Mac devices
- iPod is now a "Phone" because of the screensize.
- Split words also on _
- New Device class: "Handheld Game Console"

v0.10
===
- Cleanup of duplicate rules (small performance improvement)
- Added JMH based benchmark
- Added the option to remove all rules that only provide fields we're not interested in at that moment.
- Pig UDF support for requested fields
- Improved performance by detecting a mismatch faster.
- Change license to Apache 2.0

v0.11
===
- Implement test code coverage measuring
- Improve test coverage.
- Detect Bing related bots.

v0.12
===
- Changed the way the version and commit information is made available in the code.
- The UDFs now return the version of the analyzer engine
- Fixed nasty exception in rare cases where %20 appears in the useragent.

v1.0
===
- Various small improvements.
- Project is mature enough to call this 1.0

v1.1
===
- Report on IE compatibility mode
- Walker language now supports nesting some functions
- Added NormalizeBrands as a new function
- Walker language now allows spaces for readability
- All 'Hacker' situations now have DeviceVersion field set.
- [BUG] Matchers with ONLY IsNull and Fixedstrings would never match.
- Added Opera Neon, Vivaldi and Firefox Focus

v1.2
===
- Limit use of IsNull operator.
- Fix root level fields.
- Fix issues with Hacker detection
- Implement DuckDuckGo app