@@ -102,3 +102,4 @@ v1.2
 - Fix root level fields.
 - Fix issues with Hacker detection
 - Implement DuckDuckGo app
+- Implement WeChat app
